--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "url": "https://github.com/tinybyte-labs/react-native-color-picker"
   },
   "devDependencies": {
+    "@types/color": "^3.0.6",
+    "@types/react": "^18.2.37",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -28,5 +30,9 @@
   ],
   "bugs": {
     "url": "https://github.com/tinybyte-labs/react-native-color-picker/issues"
+  },
+  "dependencies": {
+    "color": "^4.2.3",
+    "zod": "^3.22.4"
   }
 }
