--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "noImplicitReturns": true,
     "outDir": "./build"
   },
-  "exclude": ["./node_modules", "./build"],
+  "exclude": ["node_modules", "build", "examples"],
   "include": ["src/**/*"]
 }
